# fontweaver-open

./: LICENSE  README.md  cli.py  justfile  pyproject.toml
src/fontweaver/: config.py  fonts.py  model.py  process_dataset.py  sampler.py  train.py
